# smallcat

./: .pre-commit-config.yaml  .pre-commit-config.yml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish-documentation.yml  publish.yml
api/catalog/: index.html
api/datasets/: index.html
docs/: index.md
docs/examples/: airflow.md  standalone.md
examples/airflow/: index.html
examples/standalone/: index.html
schemas/: catalog.schema.json
search/: search_index.json
src/smallcat/: __init__.py  catalog.py
src/smallcat/datasets/: base_dataset.py  csv_dataset.py  delta_table_dataset.py  excel_dataset.py  parquet_dataset.py
tests/: conftest.py  test_catalog.py  test_data_dictionary.py  test_loaders.py
tools/: generate_schema.py
