[project]
name = "smallcat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
smallcat = "smallcat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # "ANN", 
    # "RUF012", 
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D103", # undocumented-public-function
    "S101", # assert
]

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
